fix(theme): copy btn style on iOS (#766)

--- a/packages/theme-default/src/builtins/SourceCode.less
+++ b/packages/theme-default/src/builtins/SourceCode.less
@@ -31,6 +31,7 @@
     display: inline-block;
     width: 16px;
     height: 16px;
+    padding: 0;
     border: 0;
     outline: none;
     cursor: pointer;
